web/static/css/app.css
/* ... */
#solutions {
  position:absolute;
  /*bottom:7em;*/
  left:2.2em;
  color:rgb(230,48,46);
  font-family:Avenir,sans-serif;
  text-transform:lowercase;
  letter-spacing:0.1em;
  font-size:2em;
}

#solutions-feature {
  transition:color 0.5s ease;
  position:absolute;
  left:0.5em;
  color:#fff;
  font-family:league-gothic,sans-serif;
  text-transform:uppercase;
  letter-spacing:0.1em;
  font-size:6em;
  font-weight:100;
  max-width:8em;
}

#solutions-feature:hover {
  color:#ff7878;
}

/*
* EVENTS
*/

#events-section {
  background-color:#c4c4c4;
  background-image:url("/images/events-cover.jpg");
  background-repeat:no-repeat;
  background-size:cover;

  box-sizing:border-box;
  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:column;
  flex-direction:column;
  justify-content:center;
  align-items:center;

  overflow:hidden;
  height:100vh;
  position:relative;
}

#events-triangles {
  background-image:url("/images/events-triangles.png");
  background-repeat:no-repeat;
  background-size:cover;
  position:absolute;

  width:80vw;
  height:100vh;
  bottom:0;
  right:0;
}

#events {
  position:absolute;
  bottom:10em;
  left:2.2em;
  color:rgb(230,48,46);
  font-family:Avenir,sans-serif;
  text-transform:lowercase;
  letter-spacing:0.1em;
  font-size:2em;
}

#events-feature {
  transition:color 0.5s ease;
  position:absolute;
  bottom:0.2em;
  left:0.5em;
  color:#fff;
  font-family:league-gothic,sans-serif;
  text-transform:uppercase;
  letter-spacing:0.1em;
  font-size:6em;
  font-weight:100;
  max-width:8em;
}

#events-feature:hover {
  color:#ff7878;
}

/*
* FOOTER
*/

footer {
  background:-webkit-linear-gradient(right, rgb(230,48,46), rgb(166,48,44));
  box-sizing:border-box;

  display:flex;
  align-content:center;
  align-items:center;
  -webkit-flex-direction:row;
  flex-direction:row;
}

.footer-section {
  margin:5vh 10vw 5vh 10vw;
  width:20vw;
  font-family:Avenir, sans-serif;
  font-size:0.8em;
}

.footer-section-icons {
  max-width:10vw;
  min-width:80px;
}

summary {
  color:black;
}

.footer-info {
  color:white;
  letter-spacing:0.05em;
  font-weight:100;
  margin:0;
}

.footer-icon {
  max-width:2.5vw;
  min-width:25px;
  margin:0 0.5vw 0 0.5vw;
}

a {
  text-decoration:none;
}

/*
* CONSULTANCY - WHAT WE DO
*/

#what-we-do-section {
  background:-webkit-linear-gradient(rgb(230,48,46), rgb(166,48,44));
  box-sizing:border-box;

  display:flex;
  align-content:center;
  align-items:center;

  font-family:Avenir, sans-serif;
  color:#ff9999;
}

#what-we-do-container {
  width:40vw;
  padding:0 0 0 10vw;
}

#what-we-do {
  width:20vw;
  text-transform:lowercase;
  font-weight:100;
  font-size:1.2em;
  color:#fff;
}

#what-we-do-underline {
  border-bottom: 2px solid #fff;
  width:5vw;
}

#what-we-do-text {
  width:40vw;
  font-size:1.1em;
}

.what-we-do-relevant {
  font-weight:800;
  color:#fff;
}

/*
* CONSULTANCY - OUR PROCESS
*/

#our-process-section {
  box-sizing:border-box;

  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:column;
  flex-direction:column;
  align-items:center;
  justify-content:center;

  overflow:hidden;
  height:100vh;
  background-image:url("/images/our-process-cover.png");
  background-repeat:no-repeat;
  background-size:cover;
  position:relative;
}

#our-process-video-color {

  animation: fade 4s 1s infinite linear alternate;
  background-image:url("/images/our-process-video-cover.png");
  background-color:#000;
  background-blend-mode:multiply;

  opacity:0.7;

  position:absolute;
  top:0;
  right:0;
  bottom:0;
  left:0;
}

#our-process {
  width:80vw;
  font-family:Avenir, sans-serif;
  text-transform:lowercase;
  font-weight:100;
  color:#fff;
  position:absolute;
  top:1em;
}

#our-process-cards-container {
  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:row wrap;
  flex-direction:row wrap;
  justify-content: space-around;
  position:absolute;
}

.our-process-card {
  background-color:#fff;
  box-shadow:0 0 15px #5f4444;

  width:300px;
  margin:0 0.5vw 0 0.5vw;
  padding:1em;
  bottom:3em;

  font-family:Avenir, sans-serif;
  text-align:justify;
}

/*
* CONSULTANCY - OUR VISION
*/

#our-vision-schema {
  width:50vw;
  margin:2vh 25vw 0 25vw;
}

#our-vision-container {
  width:40vw;
  padding:0 0 0 10vw;
  top:20;
}

#our-vision {
  width:20vw;
  text-transform:lowercase;
  font-weight:100;
  font-size:1.5em;
  color:#fff;
  font-family:"Avenir CDN", sans-serif;
  padding-top:1em;
}

#our-vision-underline {
  border-bottom: 2px solid rgb(230,48,46);
  width:5vw;
}

/*
* CONSULTANCY - CLIENTS
*/

#clients-section {
  background-color:rgb(192,189,189);
  box-sizing:border-box;

  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:column;
  flex-direction:column;
  align-content:center;

  font-family:Avenir, sans-serif;
  color:#ff9999;
}

#clients-container {
  width:40vw;
  padding:0 0 0 10vw;
  top:20;
}

#clients {
  width:20vw;
  text-transform:lowercase;
  font-weight:100;
  font-size:1.5em;
  color:#fff;
}

#clients-underline {
  border-bottom: 2px solid rgb(230,48,46);
  width:5vw;
}

#clients-logos-container {
  padding:0 0 0 10vw;
  margin:0;
}

.clients-logo {
  max-width: 70vw;
  min-width: 65px;
  margin:1em;
}

#mattel {
  max-width: 12vw;
  min-width: 30px;
}

/*
* SHARED-ECONOMY ENGINE - DELUXE
*/

#deluxe-section {
  background-image:url("/images/deluxe-cover.png");
  background-size:cover;
  box-sizing:border-box;

  display:flex;
  display:-webkit-flex;
  -webkit-flex-direction:column;
  flex-flow:column;
  align-content:center;
  align-items:center;

  font-family:Avenir, sans-serif;
  color:#ff9999;
}

#deluxe-logo {
  max-width:30vw;
  min-width:180px;
  margin:25vh 0 10vh 0;
}

#deluxe-icon {
  max-width:10vw;
  min-width:70px;
}

#deluxe-text {
  margin:10vh;
  font-size:1.2em;
  color:white;
}

#deluxe-app {
  position:static;
  margin:0;
  max-width:55vw;
  min-width:350px;
  margin:-20vw 0 0 -100vw;
}
/* ... */

